--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,13 +36,13 @@ services:
       - '--web.console.libraries=/etc/prometheus/console_libraries'
       - '--web.console.templates=/etc/prometheus/consoles'
       - '--web.enable-lifecycle'
-    ports
+    ports:
       - 9090:9090
     networks:
       - monitoring
 
   grafana:
-    image: grafana/grafana:7.5.7
+    image: grafana/grafana:latest
     ports:
       - 3000:3000
     restart: unless-stopped
