--- a/grafana/provisioning/dashboards/dashboards.yml
+++ b/grafana/provisioning/dashboards/dashboards.yml
@@ -9,3 +9,18 @@ providers:
     editable: true
     options:
       path: /etc/grafana/provisioning/dashboards
+
+dashboards:
+  - name: 'Linux Hosts Metrics | Base'
+    orgId: 1
+    folder: ''
+    type: file
+    disableDeletion: false
+    editable: true
+    options:
+      path: /etc/grafana/provisioning/dashboards/kds-linux-hosts_rev1.json
+    dataSources:
+      - name: Prometheus
+        type: prometheus
+        access: proxy
+        url: http://localhost:9090
