--- a/grafana/provisioning/dashboards/dashboards.yml
+++ b/grafana/provisioning/dashboards/dashboards.yml
@@ -11,4 +11,4 @@ dashboards:
       - name: Prometheus
         type: prometheus
         access: proxy
-        url: http://localhost:9090
+        url: http://prometheus:9090
