--- a/grafana/provisioning/dashboards/dashboards.yml
+++ b/grafana/provisioning/dashboards/dashboards.yml
@@ -1,6 +1,6 @@
 providers: 
   -name: 'default'
-  -orgID: 1
+  orgID: 1
   folder: ''
   type: file
   disableDeletion: false
@@ -9,15 +9,15 @@ providers:
   options:
     path: /etc/grafana/provisioning/dashboards
 
-    dashboards:
-  - name: 'Linux Hosts Metrics | Base'
-    orgId: 1
-    folder: ''
-    type: file
-    disableDeletion: false
-    editable: true
-    dataSources:
-      - name: Prometheus
-        type: prometheus
-        access: proxy
-        url: http://prometheus:9090
+dashboards:
+  -name: 'Linux Hosts Metrics | Base'
+  orgId: 1
+  folder: ''
+  type: file
+  disableDeletion: false
+  editable: true
+  dataSources:
+    -name: Prometheus
+    type: prometheus
+    access: proxy
+    url: http://prometheus:9090
