--- a/grafana/provisioning/dashboards/dashboards.yml
+++ b/grafana/provisioning/dashboards/dashboards.yml
@@ -1,23 +1,17 @@
+apiVersion: 1
 providers:
   - name: 'default'
     orgId: 1
     folder: ''
     type: file
     disableDeletion: false
-    allowUiUpdates: true
     editable: true
     options:
-      path: /etc/grafana/provisioning/dashboards
+      path: /grafana/provisioning/dashboards
 
 dashboards:
-  - name: 'Linux Hosts Metrics | Base'
+  - path: /grafana/provisioning/dashboards/kds-linux-hosts_rev1.json
     orgId: 1
     folder: ''
     type: file
-    disableDeletion: false
     editable: true
-    dataSources:
-      - name: Prometheus
-        type: prometheus
-        access: proxy
-        url: http://prometheus:9090
