--- a/grafana/provisioning/dashboards/dashboards.yml
+++ b/grafana/provisioning/dashboards/dashboards.yml
@@ -10,8 +10,16 @@ providers:
       path: /grafana/provisioning/dashboards
 
 dashboards:
-  - path: /grafana/provisioning/dashboards/kds-linux-hosts_rev1.json
+  - name: 'Linux Hosts Metrics | Base'
     orgId: 1
     folder: ''
     type: file
+    disableDeletion: false
     editable: true
+    options:
+      path: /etc/grafana/provisioning/dashboards/kds-linux-hosts_rev1.json
+    dataSources:
+      - name: Prometheus
+        type: prometheus
+        access: proxy
+        url: http://prometheus:9090
