--- a/grafana/provisioning/dashboards/dashboards.yml
+++ b/grafana/provisioning/dashboards/dashboards.yml
@@ -20,7 +20,7 @@ dashboards:
     options:
       path: /etc/grafana/provisioning/dashboards/kds-linux-hosts_rev1.json
     dataSources:
-      - name: DS_PROMETHEUS
+      - name: Prometheus
         type: prometheus
         access: proxy
         url: http://prometheus:9090
