--- a/grafana/provisioning/datasources/prometheus_ds.yml
+++ b/grafana/provisioning/datasources/prometheus_ds.yml
@@ -1,6 +1,10 @@
+apiVersion: 1
 datasources:
-- name: Prometheus
-  access: proxy
-  type: prometheus
-  url: http://prometheus:9090
-  isDefault: true
+  - name: 'Prometheus'
+    type: 'prometheus'
+    access: 'proxy'
+    url: 'http://prometheus:9090'
+    isDefault: true
+    jsonData:
+      timeInterval: '5s'
+      httpMethod: 'GET'
